<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>raisin_lidar_grid_mapping_plugin</name>
  <version>0.0.0</version>
  <description>plugin for setting imu sensor data (only) to robot</description>
  <maintainer email="kaist_jsh@kaist.ac.kr">jsh</maintainer>
  <license>RAILAB License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>raisin_plugin</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rcutils</depend>
  <depend>pcl_conversions</depend>
  <depend>rcl_interfaces</depend>
  <depend>libpcl-all-dev</depend>
  <depend>octomap</depend>
  <depend>octomap_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
